# smartcity-datalake

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml  setup.sh
examples/: deploy.py  fetch_data.py  foo.py  prefect_hello_world.py
prefect_flows/: flow.py  task.py
smartcity/: __init__.py  config.py  database.py  logger.py  st_ui.py  utils.py
smartcity/air_quality/: openaq_api.py  tools.py
smartcity/database/: functions.py
streamlit_app/: Home.py  utils.py
streamlit_app/pages/: 1_🌫️_Air_Pollution.py  2_🌦️_Climate_&_Weather.py  3_🏡_Real_Estate.py  4_⚡_Energy_&_Buildings.py
tests/database/: test_logs.py  test_read_table.py
