[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcity"
version = "0.1.0"
description = "SmartCity Streamlit App for air quality, weather, and more"
authors = [{ name = "Issa K"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "streamlit",
  "pandas",
  "numpy",
  "altair",
  "openaq",
  "supabase",
  "requests",
  "prefect",
  "pendulum"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["smartcity*"]

[tool.streamlit]
main = "streamlit_app/Home.py"
